--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -76,38 +76,57 @@
 						mui.toast('两次输入的密码不一致');
 					}
 
-					//获取个人信息
-					//					var personalInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).UserPhone;
-					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-					var personalToken = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).token;
+					//握手协议
 					//需要加密的数据
-					var enData = {
-						utid: personalUTID,
-						pw: document.getElementById("password0").value
-					};
+					var enData0 = {};
 					//不需要加密的数据
-					var comData = {
+					var comData0 = {
 						uuid: plus.device.uuid,
-						shaketype: 'reg',
-						appid: plus.runtime.appid,
-						token: personalToken
+						shaketype: 'repw',
+						appid: plus.runtime.appid
 					};
 					// 等待的对话框
 					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					//发送网络请求，data为网络返回值
-					postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
-						//成功，关闭等待框
+					postDataEncry(storageKeyName.MAINURL + 'PostShakeHand', enData0, comData0, 0, wd, function(data) {
 						wd.close();
-						console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-						if(data.RspCode != 0000) {
-							mui.toast(data.RspTxt);
-							return;
+						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+							//存储到手机本地
+							window.myStorage.setItem(window.storageKeyName.SHAKEHAND, data.RspData);
+							//获取个人信息
+							//					var personalInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).UserPhone;
+							var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+							var personalToken = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).token;
+							//需要加密的数据
+							var enData = {
+								utid: personalUTID,
+								pw: document.getElementById("password0").value
+							};
+							//不需要加密的数据
+							var comData = {
+								uuid: plus.device.uuid,
+								shaketype: 'repw',
+								appid: plus.runtime.appid,
+								token: personalToken
+							};
+							//发送网络请求，data为网络返回值
+							postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
+								//成功，关闭等待框
+								wd.close();
+								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+								if(data.RspCode != 0000) {
+									mui.toast(data.RspTxt);
+									return;
+								} else {
+									mui.toast('修改密码成功')
+								}
+							});
 						} else {
-							mui.toast('修改密码成功')
+							mui.toast(data.RspTxt);
 						}
-						//存储到手机本地
-						//								window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
 					});
+
 				});
 			});
 		</script>
