--- a/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
@@ -12,6 +12,8 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/homework/homework.css" rel="stylesheet" />
+		<!--h5下拉刷新-->
+		<script src="../../js/utils/h5fresh.js"></script>
 	</head>
 
 	<body>
@@ -21,23 +23,52 @@
 			    	  <li class="mui-table-view-cell"><a class="mui-icon iconfont icon-shubendisc" href="">错题本</a></li>
 			    	  <li class="mui-table-view-cell"><a class="mui-icon iconfont icon-shezhi1" href="">作业记录</a></li>
 			    </ul>
-	    	</div>
+	    </div>
+	    <div class="mui-content">
+	        <div id="tabs-class" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+			    <div class="mui-scroll">
+			        <a class="mui-control-item mui-active">
+			    16级1班
+			        </a>
+			        <a class="mui-control-item">
+			    16级2班
+			        </a>
+			        <a class="mui-control-item">
+			    16级3班
+			        </a>
+			        <a class="mui-control-item">
+			    16级4班
+			        </a>
+			        <a class="mui-control-item">
+			    16级5班
+			        </a>
+			        <a class="mui-control-item">
+	           	16级6班
+			        </a>
+			        <a class="mui-control-item">
+			    16级7班
+			        </a>
+			    </div>
+			</div>
+	    </div>
 		<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
+		<!--<div id="refreshContainer" class="mui-scroll-wrapper">-->
 		  <div class="mui-scroll">
 		    <!--数据列表-->
-		    <ul id="list-container" class="mui-table-view">
+		    <ul id="list" class="mui-table-view">
 		      
 		    </ul>
 		  </div>
-		</div>
+	<!--</div>-->
 		<!--发布作业按钮-->
 		<a id="iconPublish" class="mui-icon iconfont icon-jia" ></a>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
 			mui.plusReady(function(){
+				mui('#tabs-class').scroll();
+//				mui('#refreshContainer').scroll()
 				/**监听父页面的图标事件*/
 				window.addEventListener('togglePop',function(e){
 					mui("#popover").popover('toggle');
@@ -67,8 +98,7 @@
 								+cell.imgs
 							+'</div>'
 							+'<p>已上传试卷人数('+cell.stuWorkNo+')</p>'
-						+'</div>'
-							
+						+'</div>'	
 			}
 		</script>
 	</body>
