--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -16,17 +17,20 @@
 
 	<body>
 		<div class="mui-content">
+			<!--滑动组件-->
 			<div id="slider" class="mui-slider">
 				<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted mui-segmented-control-positive">
+					<!--已完成选项卡-->
 					<a class="mui-control-item mui-active" href="#div-finished">
 						已完成
 					</a>
-					
+					<!--未完成选项卡-->
 					<a class="mui-control-item" href="#div-unfinish">
 						未完成
 					</a>
 				</div>
 				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-6"></div>
+				<!--滑动内容-->
 				<div class="mui-slider-group">
 					<div id="div-finished" class="mui-slider-item mui-control-content mui-active">
 						<div id="scroll1" class="mui-scroll-wrapper">
@@ -52,6 +56,7 @@
 
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<!--加载选项按钮-->
 		<script src="../../js/homework/homework_detail.js"></script>
 	</body>
 
