--- a/JiaoBaoYun-hb/html/cloud/keeprecord_history_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_history_sub.html
@@ -73,8 +73,8 @@
 				//获取班级名称
 				window.addEventListener("passData", function(e) {
 					//获得事件参数
-					var className = e.detail.className;
-					console.log('className:' + className);
+					var qun = e.detail.qun;
+					console.log('qun:' + JSON.stringify(qun));
 				});
 			});
 		</script>
