--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -25,7 +25,7 @@
 		</header>
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav class="mui-bar mui-bar-tab common-background-bar">
-			<a id="defaultTab" class="mui-tab-item mui-active" href="tab-zone.html">
+			<a id="defaultTab" class="mui-tab-item mui-active" href="quan/tab-zone.html">
 				<span class="mui-icon mui-icon-star"><span class="mui-badge">1</span></span>
 				<span class="mui-tab-label">家校圈</span>
 			</a>
