--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -5,40 +5,41 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="../css/utils/common.css" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="../../css/mui.css" />
+		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<!--本页面样式表-->
-		<link rel="stylesheet" href="../css/home/zone.css" />
-		<script type="text/javascript" src="../js/mui.min.js"></script>
-		<script type="text/javascript" src="../js/quan/tab-zone.js" ></script>
+		<link rel="stylesheet" href="../../css/home/zone.css" />
+		<script type="text/javascript" src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/quan/tab-zone.js" ></script>
 		<!--公用事件js文件-->
-		<script type="text/javascript" src="../js/utils/events.js"></script>
-		<script type="text/javascript" src="../js/testPro.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 				<!--本地存储-->
-		<script src="../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
+		<!--<script src="../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>-->
 		<!--加密-->
-		<script src="../js/libs/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
+		<!--<script src="../js/libs/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
 
 		<script src="../js/libs/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/libs/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>-->
 		<!---->
 		<!--网络请求-->
-		<script src="../js/utils/postData.js" type="text/javascript" charset="utf-8"></script>
+		<!--<script src="../js/utils/postData.js" type="text/javascript" charset="utf-8"></script>-->
 		<!--签名-->
-		<script src="../js/libs/crypto-js/require.js"></script>
+		<!--<script src="../js/libs/crypto-js/require.js"></script>
 		<script src="../js/utils/sortSign.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/utils/signHmacSHA1.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/libs/jquery.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/libs/jquery.js" type="text/javascript" charset="utf-8"></script>-->
 
 
 
 		<!--本地存储-->
-		<script src="../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
+		<!--<script src="../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>-->
 		<!--侧滑-->
-		<script src="../js/main/slide_navigation.js">
+		<script src="../../js/main/slide_navigation.js">
 		</script>
 		<style type="text/css">
 			/*自定义系统segmentcontrol控件*/
@@ -85,7 +86,7 @@
 				<ul class="mui-table-view">
 					<!--学生动态入口start-->
 					<li class="mui-table-view-cell mui-media studentsdynamic">
-						<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u72.png">
+						<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png">
 						<p class="time">10月19</p>
 						<div class="mui-media-body">
 							李欣芸
@@ -93,19 +94,19 @@
 						</div>
 					</li>
 					<!--学生动态入口end-->
-					<li id="tarClass" class="mui-table-view-cell mui-media">
+					<li class="mui-table-view-cell mui-media tarClass">
 
-						<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u72.png">
+						<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png">
 						<p class="time">10月19</p>
 						<div class="mui-media-body">
 							1001班
-							<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../image/tab_zone/u91.png"></p>
+							<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../../image/tab_zone/u91.png"></p>
 						</div>
 
 					</li>
-					<li class="mui-table-view-cell mui-media">
+					<li class="mui-table-view-cell mui-media tarClass">
 
-						<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u34.png">
+						<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u34.png">
 						<p class="time">10月18</p>
 						<div class="mui-media-body">
 							1002班
@@ -118,7 +119,7 @@
 
 				<!--标题栏-->
 				<h4>
-					<img  src="../image/tab_zone/u131.png" />
+					<img  src="../../image/tab_zone/u131.png" />
 					<span  class="parent">家长圈</span>
 					<!--<hr class="vertical-line" />-->
 					<div style="padding: 10px 10px 10px 100px;margin-top: -45px;">
@@ -142,19 +143,19 @@
 						<ul class="mui-table-view parent-table1">
 							<li class="mui-table-view-cell mui-media parent-cell1">
 
-								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u72.png" />
-								<span style="float: left;"><img src="../image/tab_zone/u85.png" class="red-point" /></span>
+								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png" />
+								<span style="float: left;"><img src="../../image/tab_zone/u85.png" class="red-point" /></span>
 								<p class="time">10月19</p>
 								<div class="mui-media-body" ;>
 									张雨欣
-									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../image/tab_zone/u91.png"></p>
+									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../../image/tab_zone/u91.png"></p>
 								</div>
 
 							</li>
 							<li class="mui-table-view-cell mui-media parent-cell1">
 
-								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u34.png">
-								<span style="float: left;"><img src="../image/tab_zone/u85.png" class="red-point" /></span>
+								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u34.png">
+								<span style="float: left;"><img src="../../image/tab_zone/u85.png" class="red-point" /></span>
 								<p class="time">10月18</p>
 								<div class="mui-media-body">
 									李芸
@@ -164,18 +165,18 @@
 							</li>
 							<li class="mui-table-view-cell mui-media parent-cell1">
 
-								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u72.png" />
-								<span style="float: left;"><img src="../image/tab_zone/u85.png" class="red-point" /></span>
+								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png" />
+								<span style="float: left;"><img src="../../image/tab_zone/u85.png" class="red-point" /></span>
 								<p class="time">10月19</p>
 								<div class="mui-media-body" ;>
 									张雨欣
-									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../image/tab_zone/u91.png"></p>
+									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../../image/tab_zone/u91.png"></p>
 								</div>
 
 							</li>
 							<li class="mui-table-view-cell mui-media parent-cell1">
 
-								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u34.png">
+								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u34.png">
 								<p class="time">10月18</p>
 								<div class="mui-media-body">
 									李芸
@@ -189,8 +190,8 @@
 						<ul class="mui-table-view parent-table2">
 							<li class="mui-table-view-cell mui-media parent-cell2">
 
-								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u72.png" />
-								<span style="float: left;"><img src="../image/tab_zone/u85.png" class="red-point" /></span>
+								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png" />
+								<span style="float: left;"><img src="../../image/tab_zone/u85.png" class="red-point" /></span>
 								<p class="time">10月20</p>
 								<div class="mui-media-body" ;>
 									李丽
@@ -200,7 +201,7 @@
 							</li>
 							<li class="mui-table-view-cell mui-media parent-cell2">
 
-								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u34.png">
+								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u34.png">
 								<p class="time">10月18</p>
 								<div class="mui-media-body">
 									张曦曦
@@ -210,17 +211,17 @@
 							</li>
 							<li id="zhang" class="mui-table-view-cell mui-media parent-cell2">
 
-								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u72.png" />
+								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png" />
 								<p class="time">10月19</p>
 								<div class="mui-media-body" ;>
 									刘若曦
-									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../image/tab_zone/u91.png"></p>
+									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../../image/tab_zone/u91.png"></p>
 								</div>
 
 							</li>
 							<li class="mui-table-view-cell mui-media parent-cell2">
 
-								<img class="mui-media-object mui-pull-left" src="../image/tab_zone/u34.png">
+								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u34.png">
 								<p class="time">10月18</p>
 								<div class="mui-media-body">
 									安琪
