--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -170,24 +170,24 @@
 					plus.screen.lockOrientation("portrait-primary");
 					var settings = app.getSettings();
 					var state = app.getState();
-					var mainPage = $.preload({
-						"id": '../../html/index.html',
-						"url": '../../html/index.html'
-					});
-					var toMain = function() {
-						$.fire(mainPage, 'show', null);
-						setTimeout(function() {
-							$.openWindow({
-								id: '../../html/index.html',
-								show: {
-									aniShow: 'pop-in'
-								},
-								waiting: {
-									autoShow: false
-								}
-							});
-						}, 0);
-					};
+//					var mainPage = $.preload({
+//						"id": '../../html/index.html',
+//						"url": '../../html/index.html'
+//					});
+//					var toMain = function() {
+//						$.fire(mainPage, 'show', null);
+//						setTimeout(function() {
+//							$.openWindow({
+//								id: '../../html/index.html',
+//								show: {
+//									aniShow: 'pop-in'
+//								},
+//								waiting: {
+//									autoShow: false
+//								}
+//							});
+//						}, 0);
+//					};
 					// close splash
 					setTimeout(function() {
 						//关闭 splash
@@ -259,7 +259,8 @@
 										mui.toast('登录成功')
 											//存储到手机本地
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
-										toMain();
+//										toMain();
+										events.openNewWindowWithData('../../html/index.html','');
 									}
 								});
 							} else {
