--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -126,13 +126,19 @@
 				text-align: center;
 				background-color: rgba(0, 0, 0, 0.3);
 			}
+			.mui-popover {
+	height: 60px;
+	width: 60px;
+}
 		</style>
 	</head>
 
 	<body>
+
 		<!--下拉刷新容器-->
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
+
 				<!--数据列表-->
 				<ul class="mui-table-view">
 					<!--<li id="0" class="mui-table-view-cell">
@@ -208,10 +214,17 @@
 
 				</ul>
 			</div>
+
 		</div>
+
+<!--<div id="popover" class="mui-popover ">
+	<h5 style="text-align: center;color: #1277C7;">删除</h5>
+	<hr style="height:1px;border:none;border-top:1px solid #555555;padding-left: 2px;" />
+	<h5 style="text-align: center;color: #1277C7;">屏蔽</h5>
+	</div>-->
+
 	</body>
 	<script>
-
 		mui.init({
 			pullRefresh: {
 				container: '#pullrefresh',
@@ -258,16 +271,16 @@
 			dynamiclistitem.addItem(table, data, id);
 			var click = []; //记录被点击的li的id和被点击元素
 
-			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
-				var toast = '';
-				mui.each(click, function(index, element) {
-					toast = toast + element;
-				});
-				var id = this.getAttribute('id');
-				click.push(id);
-				mui.toast('li-id:' + click[click.length - 1] + '-' + toast);
-				click = [];
-			});
+			//			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
+			//				var toast = '';
+			//				mui.each(click, function(index, element) {
+			//					toast = toast + element;
+			//				});
+			//				var id = this.getAttribute('id');
+			//				click.push(id);
+			//				mui.toast('li-id:' + click[click.length - 1] + '-' + toast);
+			//				click = [];
+			//			});
 
 			mui('.mui-table-view').on('tap', '.dynamic-personal-image', function() {
 				click.push('头像');
